# PeriodicLoops

./: .clang-format  CMakeLists.txt  README.md  install_vst.bat  install_vst_au.sh
src/: CMakeLists.txt  audio_processor.cpp
src/logging/: logging.hpp
src/music/: drums.hpp  midi.hpp  patterns.hpp  scales.hpp
src/processor/: engine.cpp  engine.hpp  periodic_loops.cpp  periodic_loops.hpp  plugin_state.cpp  plugin_state.hpp
src/ui/: cc_controls.hpp  cc_display.hpp  cc_list_panel.hpp  circle_grid.hpp  colours.hpp  group_list_panel.hpp  group_panel.hpp  group_strip.hpp  knob.hpp  knob_cc_value.hpp  knob_value_label.hpp  knob_with_unit.hpp  midi_export_button.hpp  note_controls.hpp  note_list_panel.hpp  orbital_display.hpp  p_loops_ui.hpp  pattern_picker.hpp  settings_panel.hpp  time_display.hpp  ui_constants.hpp
src/ui/displays/: wave_thumbnail.hpp
src/utils/: constants.hpp  unreachable.hpp  utils.hpp
